# Job-Prep2025

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  2_numpy_fundamentals.py  3_basic_signal_processing.py  GEMINI.md  README.md  debug_mock_sensor.py  main.py  pyproject.toml  requirements.txt
.pytest_cache/: .gitignore
Day01-Numpy-Scipy/: 1_pandas_to_numpy_bridge.py
data/: accelerometer_data.csv  movement_sample.csv
job_prep_project.egg-info/: PKG-INFO  SOURCES.txt
sandbox/: 2_numpy_fundamentals.py  3_basic_signal_processing.py  visualize_event_detection.py  visualize_filter_effect.py
sandbox/Day01-Numpy-Scipy/: 1_pandas_to_numpy_bridge.py
src/: app.py  dataset_builder.py  drivers.py  features.py  main.py  model.py  model_trainer.py  plot_comparison.py  predictor.py  signal_generator.py  train_dl.py  utils.py  visualize_data.py
src/data_processing/: reader.py
tests/: test_features.py  test_predictor.py  test_signal_generator.py  test_utils.py
