# This is the main configuration file for the project, using Poetry.

[tool.poetry]
name = "job-prep-project"
version = "0.0.1"
description = "An activity recognition project using sensor data."
# TODO: Update the author line below
authors = ["Soroush Haghi <your.email@example.com>"]
readme = "README.md"
# This tells poetry our package 'src' is the main package
packages = [{include = "src"}]

[tool.poetry.dependencies]
# This line fixes the Python version error
python = "^3.9" 

# --- Main Project Dependencies ---
# We list all packages your project *needs* to run
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
joblib = "^1.3.0"
typer = "^0.9.0"
# 'rich' will be added automatically by the 'poetry add' command later.
rich = "^14.2.0"
click = "8.1.7"

[tool.poetry.group.dev.dependencies]
# --- Development Dependencies ---
# Packages needed only for testing, linting, etc.
pytest = "^7.0.0"
pytest-mock = "^3.10.0"
flake8 = "^6.0.0"
pre-commit = "^4.3.0"

[build-system]
# This tells tools like pip how to build your project
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
# We keep your original flake8 config
max-line-length = 88
extend-ignore = "E501"